# iitr-phn624-computational-nuclear-physics

./: .gitmodules  CMakeLists.txt  fortls.json  progress.org
basic/tutorial-1-part-A/1.1-factorial/: main.F90  out
basic/tutorial-1-part-A/1.2-double-factorial/: main.F90  out
basic/tutorial-1-part-A/2-sum-of-squares/: main.F90  out
basic/tutorial-1-part-A/3-quadruple-magnetic-moment/: ans.org  main.F90  out
basic/tutorial-1-part-A/4-occilator-length-parameter/: main.F90  out
basic/tutorial-1-part-A/5-woods-saxon-potential/: main.F90  out  plot.ps
basic/tutorial-1-part-A/6-numerical-integration/: main.F90  out
basic/tutorial-1-part-B/1-hermite-polynomial/: main.F90  out  plot.ps
basic/tutorial-1-part-B/2-harmonic-occilator-wavefunc/: main.F90  out  plot.ps
basic/tutorial-1-part-B/3-harmonic-oscillator-matrix/: main.F90  out
basic/tutorial-1-part-B/4-legendre-polynomial/: main.F90  out
basic/tutorial-1-part-B/4.1-legendre-polynomial/: main.F90  out
basic/tutorial-1-part-B/4.2-associated-legendre-polynomial/: main.F90  out  plot.ps
src/unit-0/: double-factorial.F90  factorial.F90  integratioan-1D.F90
src/unit-1/: harmonic-oscillator.F90  polynomials.F90
src/utils/: assert.F90  constants.F90  kinds.F90
